--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,38 @@
 <body>
     <div id="app">
         <h1>Homework Grader</h1>
-        <input type="file" id="imageUpload" accept="image/*">
-        <button id="uploadButton">Upload and Grade</button>
-        <div id="result"></div>
+        
+        <!-- 登录部分 -->
+        <div id="loginSection">
+            <h2>Login</h2>
+            <input type="email" id="loginEmail" placeholder="Email">
+            <input type="password" id="loginPassword" placeholder="Password">
+            <button id="loginButton">Login</button>
+        </div>
+
+        <!-- 注册部分 -->
+        <div id="registerSection">
+            <h2>Register</h2>
+            <input type="email" id="registerEmail" placeholder="Email">
+            <input type="password" id="registerPassword" placeholder="Password">
+            <button id="registerButton">Register</button>
+        </div>
+
+        <!-- 作业上传部分（初始隐藏） -->
+        <div id="homeworkSection" style="display: none;">
+            <input type="file" id="imageUpload" accept="image/*">
+            <button id="uploadButton">Upload and Grade</button>
+            <div>   
+                <input type="checkbox" id="useClaudeApi"> Use Claude API
+            </div>
+            <div id="result"></div>
+        </div>
+
+        <!-- 登出按钮（初始隐藏） -->
+        <button id="logoutButton" style="display: none;">Logout</button>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="/src/firebase-config.js"></script>
-    <script src="/src/app.js"></script>
+
+    <script type="module" src="js/firebase-config.js"></script>
+    <script type="module" src="js/front.js"></script>
 </body>
 </html>
