OK  for text OCR, wating key to test API

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework Grader</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* 您可以在这里添加一些基本的样式 */
+        body { font-family: Arial, sans-serif; }
+        .section { margin-bottom: 20px; }
+        #resultDiv { margin-top: 20px; }
+    </style>
 </head>
 <body>
     <div id="app">
