front end ready to try

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
         .section { margin-bottom: 20px; }
         #resultDiv { margin-top: 20px; }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <div id="app">
@@ -45,7 +46,6 @@
         <button id="logoutButton" style="display: none;">Logout</button>
     </div>
 
-    <script type="module" src="js/firebase-config.js"></script>
     <script type="module" src="js/front.js"></script>
 </body>
 </html>
